# LexOrchestrator-AU

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/mock_legal_docs/: fair_work_act_unfair_dismissal.json  high_court_procedural_fairness.json  nsw_contract_penalties_case.json
docker/: .env.compose.example
scripts/: export_feedback.py  ingest_sample.py
src/lexorchestrator_au/: __init__.py  main.py
src/lexorchestrator_au/adapters/: __init__.py  anthropic.py  base.py  llama.py  openai.py  registry.py
src/lexorchestrator_au/api/: __init__.py  dependencies.py  query_service.py  routes.py  schemas.py
src/lexorchestrator_au/attribution/: __init__.py  service.py
src/lexorchestrator_au/core/: __init__.py  auth.py  cache.py  config.py  logging.py  metrics.py  middleware.py  rate_limit.py
src/lexorchestrator_au/db/: __init__.py  init_db.py  models.py  session.py
src/lexorchestrator_au/feedback/: __init__.py  export.py  service.py
src/lexorchestrator_au/orchestration/: __init__.py  circuit_breaker.py  normalizer.py  orchestrator.py  prompts.py  router.py
src/lexorchestrator_au/rag/: __init__.py  chunker.py  embeddings.py  ingestion.py  repository.py  reranker.py  retrieval.py  types.py
src/lexorchestrator_au/scripts/: __init__.py  export_feedback.py  ingest_sample.py
tests/: conftest.py  test_api_security.py  test_attribution.py  test_cache.py  test_chunker.py  test_circuit_breaker.py  test_config.py  test_normalizer.py  test_router.py  test_trace.py
