[project]
name = "lexorchestrator-au"
version = "0.1.0"
description = "Jurisdiction-aware LLM orchestration and legal RAG backend for Australian law firms"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Yabloko Labs" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy[asyncio]>=2.0.32",
  "asyncpg>=0.29.0",
  "pgvector>=0.3.2",
  "httpx>=0.27.0",
  "redis>=5.0.8",
  "prometheus-client>=0.20.0",
  "orjson>=3.10.7",
  "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.5.7",
  "mypy>=1.11.1"
]

[project.scripts]
lex-ingest-sample = "lexorchestrator_au.scripts.ingest_sample:main"
lex-export-feedback = "lexorchestrator_au.scripts.export_feedback:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lexorchestrator_au"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
asyncio_mode = "auto"
