[project]
name = "lexorchestrator-au"
version = "0.1.0"
description = "Jurisdiction-aware LLM orchestration and legal RAG backend for Australian law firms"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Yabloko Labs" }]
dependencies = [
  "fastapi>=0.115.0,<1.0",
  "uvicorn[standard]>=0.30.0,<1.0",
  "pydantic>=2.8.0,<3.0",
  "pydantic-settings>=2.4.0,<3.0",
  "sqlalchemy[asyncio]>=2.0.32,<3.0",
  "asyncpg>=0.29.0,<1.0",
  "pgvector>=0.3.2,<1.0",
  "httpx>=0.27.0,<1.0",
  "redis>=5.0.8,<6.0",
  "prometheus-client>=0.20.0,<1.0",
  "orjson>=3.10.7,<4.0",
  "python-dotenv>=1.0.1,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.8",
  "pytest-cov>=5.0.0",
  "pytest-mock>=3.14.0",
  "respx>=0.21.1",
  "ruff>=0.5.7",
  "mypy>=1.11.1",
  "bandit>=1.7.9",
  "pre-commit>=3.8.0",
]

[project.scripts]
lex-ingest-sample = "lexorchestrator_au.scripts.ingest_sample:main"
lex-export-feedback = "lexorchestrator_au.scripts.export_feedback:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lexorchestrator_au"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S", "SIM", "T20", "RUF"]
ignore = ["E501", "S101", "S603", "S607"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
addopts = "-q --tb=short"
asyncio_mode = "auto"

[tool.bandit]
exclude_dirs = ["tests"]
